# instant-mongo

./: .flake8  .gitignore  .travis.yml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  review.md  setup.py
.github/workflows/: codeql-analysis.yml  python-package.yml  python-tests.yml  test-install-from-github.yml
instant_mongo/: __init__.py  cli.py  instant_mongo.py  instant_mongodb.py  port_guard.py  util.py
tests/: conftest.py  test_async_usage.py  test_basic_usage.py  test_fork_safe_readme_example.py  test_instant_mongodb.py  test_periodic_executor_patch.py  test_port_guard.py  test_smoke.py  test_util.py
