[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instant-mongo"
version = "1.0.5"
description = "MongoDB runner for integration (and other) tests"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Petr Messner", email = "petr.messner@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["instant", "MongoDB", "testing"]
dependencies = ["pymongo"]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
exclude = ["doc", "tests"]
