[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instant-mongo"
version = "1.0.7"
description = "MongoDB runner for integration (and other) tests"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Petr Messner", email = "petr.messner@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["instant", "MongoDB", "testing"]
dependencies = ["pymongo"]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
exclude = ["doc", "tests"]
