[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "instant-mongo"
version = "1.0.7"
description = "MongoDB runner for integration (and other) tests"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    {name = "Petr Messner", email = "petr.messner@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["instant", "MongoDB", "testing"]
dependencies = ["pymongo"]

[dependency-groups]
dev = [
    "flake8>=5.0.4",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.21.2",
]

[tool.hatch.build.targets.wheel]
packages = ["instant_mongo"]
